--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Inline Callouts",
 	"version": "0.1.0",
 	"minAppVersion": "0.15.0",
-	"description": "Add inline callouts/badges/icons to notes.",
+	"description": "Add inline callouts/badges to notes.",
 	"author": "@gapmiss",
 	"authorUrl": "https://github.com/gapmiss",
 	"isDesktopOnly": false
